public/frontend/assets/css/style.css
/* ... */
.share-popup-wrapper.open {
    opacity: 1;
    visibility: visible;
}
.share-popup-wrapper.open .share-popup {
    scale: 1;
}
.share-popup {
    width: 80%;
    margin: 0 26rem;
    border-radius: 0.75rem;
    overflow: hidden;
    scale: 0.85;
    padding: 1rem 1.5rem 2rem;
    transition: all 150ms ease-in;
    color: var(--text-color);
}
.share-popup.light {
    background: #fff;
    --text-color: #000;
    box-shadow: 0 0 10px 5px #00000020;
}
.share-popup.dark {
    background: #212121;
    --text-color: #fff;
    border: 1px solid #4c4c4c;
}
.share-popup__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.share-popup__header .title {
    font-size: 20px;
    font-weight: 600;
}

.share-popup__header .close-btn {
    font-size: 34px;
    aspect-ratio: 1/1;
    width: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 6px;
    transition: all 200ms;
    cursor: pointer;
}

.share-popup__header .close-btn:hover {
    background-color: #cccccc42;
}
.share-popup__body {
    border: 1px solid transparent;
    border-inline: none;
    padding: 0.75rem 0;
    margin: 1.25rem 0 0.75rem;
}
.copy-link {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border: 1px solid transparent;
    padding: 0.6rem 0.95rem;
    border-radius: 0.5rem;
    line-height: 1;
    margin: 2.5rem 0 1.5rem;
}
.copy-link__input {
    width: 100%;
    font-size: 0.85rem;
    padding-right: 1.25rem;
    border: none;
    outline: none;
    background: none;
    color: var(--text-color);
}
.copy-link__btn {
    font-size: 0.85rem;
    padding: 0.6rem 0.95rem;
    border-radius: 100px;
}
.share-popup.dark .copy-link__btn {
    background: #fff;
    color: #000;
}
.share-popup.light .share-popup__body {
    border-color: #d3d2d2;
}
.share-popup.dark .share-popup__body {
    border-color: #4c4c4c;
}
.share-popup.light .copy-link {
    border-color: #d3d2d2;
}
.share-popup.dark .copy-link {
    border-color: #4c4c4c;
    background: #0f0f0f;
}
.platforms {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.platform {
    width: 16%;
    text-align: center;
}

.platform a {
    width: 100%;
}

.platform .title {
    font-size: 0.9rem;
    color: var(--text-color);
    margin-top: 0.45rem;
}
.platform .icon {
    width: 55px;
    aspect-ratio: 1/1;
    background: var(--color-primary);
    border-radius: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
}
.platform .icon i {
    font-size: 2.2rem;
    color: #fff;
}
.platform img {
    width: 27px;
    aspect-ratio: 1/1;
    filter: invert(1);
}
/* share popup */
.editor-content {
    font-size: 15px;
    color: #5e6d77;
}

.editor-content :is(p, li, strong) {
    font-size: 0.99em;
}

.editor-content ul {
    margin: 0.5rem 0 0.5rem 1.5rem;
}

.editor-content li {
    list-style-type: disc !important;
    padding: 0.15rem 0;
}

.editor-content :is(p, li) {
    font-weight: 400;
}

.editor-content h1 {
    font-size: 2.75em;
}

.editor-content h2 {
    font-size: 1.95em;
}

.editor-content h3 {
    font-size: 1.4em;
}

.editor-content h4 {
    font-size: 1.25em;
}

.editor-content h5 {
    font-size: 1em;
}

.editor-content h6 {
    font-size: 0.95em;
}

.editor-content :is(h1, h2, h3, h4, h5, h6) {
    font-weight: 700;
    color: #343a40;
    margin-bottom: 0.85rem;
}
.breadcrumb {
    margin: 1.1rem 0;
}
.line-clamp{
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
}
.loginBtn{
    font-weight: 600;
    color: var(--color-primary);
}
.tour-details__title {
    font-size: 1rem;
    font-weight: 700;
}

.tour-details {
    color: #343a40;
    padding: 1.5rem 0 1rem;
    border-bottom: 1px solid #e9e9e9;
    margin-bottom: 0.5rem;
}
.tour-details__items {
    margin: 0.5rem 0 0.25rem 1rem;
}

.tour-details__items li {
    font-size: 14px;
    font-weight: 500;
    list-style-type: disc !important;
    color: #5e6d77;
    padding: 0.25rem 0;
}

